<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/name_tv"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/spacingDefault"
        android:layout_marginStart="@dimen/spacingDefault"
        android:layout_marginBottom="@dimen/spacingDefault"
        android:textSize="@dimen/textSizeLarge"
        android:text="@string/person_name"/>

    <EditText
        android:id="@+id/name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name_tv"
        android:layout_marginStart="@dimen/spacingDefault"
        android:layout_marginEnd="@dimen/spacingDefault"
        android:layout_marginTop="@dimen/spacingSmall"
        />
    <TextView
        android:id="@+id/born_tv"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name_et"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/spacingDefault"
        android:layout_marginStart="@dimen/spacingDefault"
        android:layout_marginBottom="@dimen/spacingDefault"
        android:textSize="@dimen/textSizeLarge"
        android:text="@string/person_born"/>

    <EditText
        android:id="@+id/born_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/born_tv"
        android:layout_marginStart="@dimen/spacingDefault"
        android:layout_marginEnd="@dimen/spacingDefault"
        android:layout_marginTop="@dimen/spacingSmall"
        />
    <TextView
        android:id="@+id/death_tv"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/born_et"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/spacingDefault"
        android:layout_marginStart="@dimen/spacingDefault"
        android:layout_marginBottom="@dimen/spacingDefault"
        android:textSize="@dimen/textSizeLarge"
        android:text="@string/person_death"/>
    <EditText
        android:id="@+id/death_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/death_tv"
        android:layout_marginStart="@dimen/spacingDefault"
        android:layout_marginEnd="@dimen/spacingDefault"
        android:layout_marginTop="@dimen/spacingSmall"
        />

    <TextView
        android:id="@+id/description_tv"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/death_et"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/spacingDefault"
        android:layout_marginStart="@dimen/spacingDefault"
        android:layout_marginBottom="@dimen/spacingDefault"
        android:textSize="@dimen/textSizeLarge"
        android:text="@string/person_description"/>
    <EditText
        android:id="@+id/description_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/description_tv"
        android:layout_marginStart="@dimen/spacingDefault"
        android:layout_marginEnd="@dimen/spacingDefault"
        android:layout_marginTop="@dimen/spacingSmall"
        />

    <TextView
        android:id="@+id/image_tv"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/description_et"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/spacingDefault"
        android:layout_marginStart="@dimen/spacingDefault"
        android:layout_marginBottom="@dimen/spacingDefault"
        android:textSize="@dimen/textSizeLarge"
        android:text="@string/person_image"/>
    <EditText
        android:id="@+id/image_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image_tv"
        android:layout_marginStart="@dimen/spacingDefault"
        android:layout_marginEnd="@dimen/spacingDefault"
        android:layout_marginTop="@dimen/spacingSmall"
        />
    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_et"
        android:layout_marginTop="@dimen/spacingDefault"
        android:layout_marginRight="@dimen/spacingDefault"
        android:text="@string/save_btn"
        />
</androidx.constraintlayout.widget.ConstraintLayout>